# strawberry-tools

./: .flake8  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.rst  README.md  requirements-dev.txt  setup.cfg
.github/workflows/: build.yml
popie/: __main__.py  analyzer.py  constants.py  languages.py  main.py  object_types.py  popiefile.py  reporter.py
tests/popie/: test_analyzer.py  test_popiefile.py
