[metadata]
name = pumpkin-tools
version = 1.7.3

url = https://github.com/pumpkin-py/pumpkin-tools
description = Tools for the pumpkin.py bot framework
long_description = file: README.md
long_description_content_type = text/markdown

classifiers =
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10

[options]
package_dir =
	=.
packages = find:
python_requires = >=3.8

[options.entry_points]
console_scripts =
	popie = popie:main
